fix(card): outline should be visible when card has focus-visible
- also improves card as label for radio/checkbox

!!! there is a problem with differentiating between checked card and focus-visible card

example: https://play.tailwindcss.com/BQizZyuAT6?file=css

close #4421

--- a/packages/daisyui/src/components/card.css
+++ b/packages/daisyui/src/components/card.css
@@ -1,15 +1,12 @@
 .card {
   @layer daisyui.l1.l2.l3 {
     @apply rounded-box relative flex flex-col;
-    outline-width: 2px;
     transition: outline 0.2s ease-in-out;
-    outline: 0 solid #0000;
+    outline: 2px solid #0000;
     outline-offset: 2px;
-    &:focus {
-      @apply outline-hidden;
-    }
 
-    &:focus-visible {
+    &:focus-visible,
+    &:has(> :checked, > :is([type="checkbox"], [type="radio"]):focus-visible) {
       outline-color: currentColor;
     }
 
@@ -32,12 +29,12 @@
     figure {
       @apply flex items-center justify-center;
     }
-    &:has(> input:is(input[type="checkbox"], input[type="radio"])) {
+    &:has(> :is([type="checkbox"], [type="radio"])) {
       @apply cursor-pointer;
       user-select: none;
     }
-    &:has(> :checked) {
-      outline: 2px solid currentColor;
+    > :is([type="checkbox"], [type="radio"]) {
+      @apply appearance-none;
     }
   }
 }
